<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            style="@style/cardView">
            <LinearLayout style="@style/cardViewLinearLayout">

                <TextView
                    style="@style/HeaderTextStyle"
                    android:text="@string/question_01" />

                <EditText
                    android:id="@+id/answer01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/response_placeholder"
                    android:inputType="text"
                    android:textAllCaps="false" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            style="@style/cardView">
            <LinearLayout style="@style/cardViewLinearLayout">

                <TextView
                    style="@style/HeaderTextStyle"
                    android:text="@string/question_02" />

                <TextView
                    style="@style/CodeSnippetStyle"
                    android:text="@string/code_snippet_loops" />

                <CheckBox
                    android:id="@+id/checkbox_n_log_n"
                    style="@style/checkbox"
                    android:text="n log n" />

                <CheckBox
                    android:id="@+id/checkbox_n"
                    style="@style/checkbox"
                    android:text="n" />

                <CheckBox
                    android:id="@+id/checkbox_2n"
                    style="@style/checkbox"
                    android:text="2n" />

                <CheckBox
                    android:id="@+id/checkbox_n_squared"
                    style="@style/checkbox"
                    android:text="n²" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            style="@style/cardView">
            <LinearLayout style="@style/cardViewLinearLayout">

                <TextView
                    style="@style/HeaderTextStyle"
                    android:text="@string/question_03" />

                <RadioGroup style="@style/radioGroup">

                    <RadioButton
                        style="@style/radioButton"
                        android:text="@string/radio_bucket_sort" />

                    <RadioButton
                        style="@style/radioButton"
                        android:text="@string/radio_cubesort" />

                    <RadioButton
                        android:id="@+id/radio_counting_sort"
                        style="@style/radioButton"
                        android:text="@string/radio_counting_sort" />

                    <RadioButton
                        style="@style/radioButton"
                        android:text="@string/radio_shell_sort" />

                </RadioGroup>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            style="@style/cardView">
            <LinearLayout style="@style/cardViewLinearLayout">

                <TextView
                    style="@style/HeaderTextStyle"
                    android:text="@string/question_04" />

                <RadioGroup style="@style/radioGroup">

                    <RadioButton
                        android:id="@+id/radio_big_o"
                        style="@style/radioButton"
                        android:text="@string/radio_o_1_amp_o_n" />

                    <RadioButton
                        style="@style/radioButton"
                        android:text="@string/radio_o_n_amp_o_1" />

                    <RadioButton
                        style="@style/radioButton"
                        android:text="@string/radio_o_1_amp_o_1" />

                    <RadioButton
                        style="@style/radioButton"
                        android:text="@string/radio_o_n_amp_o_n" />

                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            style="@style/cardView">
            <LinearLayout style="@style/cardViewLinearLayout">

                <TextView
                    style="@style/HeaderTextStyle"
                    android:text="@string/question_05" />

                <RadioGroup style="@style/radioGroup">

                    <RadioButton
                        style="@style/radioButton"
                        android:text="@string/radio_o_1" />

                    <RadioButton
                        style="@style/radioButton"
                        android:text="@string/radio_o_log_n" />

                    <RadioButton
                        android:id="@+id/radio_hash_table"
                        style="@style/radioButton"
                        android:text="@string/radio_o_n" />

                    <RadioButton
                        style="@style/radioButton"
                        android:text="@string/radio_o_n_log_n" />

                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:backgroundTint="@color/colorAccent"
                android:onClick="onSubmit"
                android:text="submit"
                android:textAllCaps="true" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>